Wrote cover letter and diversity statement for Mount San Jacinto. Removed research statement

--- a/src/application.tex
+++ b/src/application.tex
@@ -53,21 +53,21 @@
 %-----       letter       ---------------------------------------------------------
 % \input{coverletter_research.tex}
 % \clearpage
-% \input{coverletter_teaching.tex}
+\input{coverletter_teaching.tex}
 
 %% %-----       resume       ---------------------------------------------------------
-\clearpage
-\input{cv.tex}
+% \clearpage
+% \input{cv.tex}
 
 %----- list of publications -------------------------------------------------------
 %% \clearpage
 %% \makeheading
 % \input{publications.tex}
 
-%----- research statement  -------------------------------------------------------
-% \clearpage
-% \makeheading
-% \input{research_statement.tex}
+%----- diversity statement  -------------------------------------------------------
+\clearpage
+\makeheading
+\input{diversity_statement.tex}
 
 %----- teaching statement  -------------------------------------------------------
 % \clearpage
