--- a/src/coverletter_teaching.tex
+++ b/src/coverletter_teaching.tex
@@ -9,91 +9,17 @@
 \enclosure[Attached]{curriculum vit\ae{}, list of publications, teaching statement and research statement}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-With over six years of experience in theoretical nuclear physics,
-strong communication and interpersonal skills as well as in-depth
-knowledge of high performance computing, I am a strong candidate for
-the Assistant Professor position in Theoretical Nuclear Physics at San
-Diego State University. I recently started a postdoctoral position in
-the Department of Physics and Astronomy at Ohio University. My current
-research focuses on uncertainty quantification in nuclear
-interactions and nuclear many body systems.
+With over four years of physics teaching experience at the undergraduate level, a demonstrated commitment to equity in student success, as well as strong interpersonal and communication skills, I am a strong candidate for the Physics Instructor position at Mount San Jacinto College (MSJC).
 
-%\quad
+I have provided physics instruction at the introductory, intermediate and advanced level to diverse student populations since spring of 2018 . My first experience teaching physics at the undergraduate level was as a postdoc at Ohio University. There, I taught an introductory level physics class to STEM majors. As an Assistant Professor at San Diego State University I have taught physics courses in different contexts, from mid size upper division classes (around 40 students) to large enrollment introductory level physics (over 300 students). I have also taught small size graduate classes (around 15 students). In addition to teaching classes, at SDSU I have also redesigned courses with the goal of creating an equitable learning environment. This redesign includes, among other changes, the adoption of an open textbook and the implementation of think-pair-share activities in class.
 
-I earned my PhD from the University of Granada, Spain on February of
-2015. As a part of my doctoral research I undertook the most ambitious
-statistical analysis up to date of over eight thousand nucleon-nucleon
-scattering data.  This analysis allowed, for the first time, the
-quantification of statistical uncertainties and an objective
-assessment of the predictive power of phenomenological and
-microscopically derived interactions. I started my first postdoctoral
-appointment in May of 2015 at Lawrence Livermore National Laboratory
-(LLNL). There, I expanded my research skills to include the structure
-of heavy nuclei using density functional theory (DFT) methods. I led
-the computational implementation of energy density functionals derived
-from realistic interactions and worked on the propagation of
-statistical uncertainties from nuclear functionals to simulations of
-the astrophysical processes responsible for the creation of heavy
-elements. Such work could provide clues to identify the
-characteristics of the astrophysical site were the elements in our
-solar system were formed. This work required developing new
-capabilities into the DFT code used at LLNL. In particular, I
-implemented a new hybrid parallel programming module to do large scale
-simulations.
+Although my professional career has had a strong emphasis in scientific research, as I have had more opportunities to interact with students from a broad range of backgrounds I have come to realize that I want to dedicate my time helping students achieve their professional goals by providing them with the scientific knowledge that they will need inside and outside of the classroom. I am convinced that the physics instructor position at MSJC represent an excellent opportunity to achieve that goal.
 
-%\quad
+I have experience in mentoring students from underrepresented backgrounds in physics by mentoring through the NSF funded program Cal-Bridge. Cal-Bridge is a scholarship program seeking to increase participation of underrepresented groups in physics and astronomy by supporting students from primarily undergraduate California State University (CSU). As a mentor in the Cal-Bridge program I have direct knowledge of the challenges that students from disadvantaged backgrounds face when trying to achieve their academic and professional goals. As a faculty member at MSJC I could help to identify potential candidates for this program and encourage them to apply as they transfer to a 4-year program at a CSU campus.
 
-Although I have spent most of my career doing research in theoretical
-nuclear physics, I feel a strong aspiration to transmit my
-appreciation for the physical sciences to students. I first became
-aware of this aspiration while tutoring high school students as a
-college senior in Mexico. That experience gave me direct glimpse into
-the learning process that my students were going through, from
-encountering a complex subject to fully internalizing and
-understanding its more fundamental components, and ultimately applying
-this newly acquired knowledge to solve problems. While the original
-terms of my position at Ohio University did not include teaching, I
-specifically negotiated the opportunity to instruct a physics
-course. As a result of this negotiation next spring I will be
-instructing the General Physics course.  
-%
-%\quad
-%
-%% I am convinced that teaching in higher education gives a unique
-%% opportunity to impart scientific knowledge while at the
-%% same time engage them with the deep understanding of the world around
-%% us that the study of physics allows.
-%% I firmly believe that teaching
-%% science will allow me to contribute to a society that appreciates
-%% rational and critical thinking.
-In addition to being able to teach
-introductory level classes, my work experience in nuclear theory,
-statistical methods and high performance computing allows me teaching
-classes in nuclear theory and computational physics.
+I also have experience providing service to my current institution. At SDSU I currently serve on the College of Sciences Diversity and Inclusion committee. I collaborated with other members of this committee on the creation of the college's first Diversity, Equity and Inclusion plan. This plan was adopted by the college in the spring of 2021 and the committee is currently tasked with overseeing its implementation. Additionally, I have provided service to my department by overseeing the redesign of the undergraduate physics brochure. The goal of this new brochure is to present a degree in physics to high school students as an exciting opportunity with great job security that at the same time is accessible to students from all kinds of backgrounds.
 
-During the American Physical Society April meeting this year, I
-participated on the roundtable \emph{Improving the Climate in Physics
-for LGBT+ Physicists}. Through the discussions in this session,
-personal experiences as a gay physicist and reading the 2016 APS
-report \emph{LGBT Climate in Physics} I have learned about some the
-challenges that LGBT physicists, along with people of other
-underrepresented groups, experience in higher education. Some of these
-challenges include feelings of isolation, expectation of closeted
-behavior and difficulties in identifying role models. I intend to
-continue engaging in these important issues, and as a faculty member I
-would work to mitigate these and other challenges faced by LGBT
-individuals in higher education through active participation in
-programs like SafeZones@SDSU.
-
-%\quad
-
-I am convinced that my combination of communication skills, research
-experience and commitment to diversity and excellence make me an
-ideal addition the Department of Physics faculty at San Diego State
-University. Please find attached a copy of my CV, a full list of
-publications, teaching statement and research statement. Thank you for
-your time and consideration. I look forward to hearing from the hiring
-committee.
+I am convinced that my combination of teaching experience, communication skills, and commitment to diversity and excellence make me an ideal addition to the faculty at Mount San Jacinto College. Thank you for your time and consideration. I look forward to hearing from the hiring committee.
 
 %\quad
 
