Added feature selection paper to publications

--- a/src/rodrigo.bib
+++ b/src/rodrigo.bib
@@ -1,3 +1,15 @@
+@article{arXiv22,
+    author = "Navarro P\'erez, Rodrigo and Schunck, Nicolas",
+    title = "{Controlling extrapolations of nuclear properties with feature selection}",
+    url = "https://arxiv.org/abs/2201.08835",
+    eprint = "2201.08835",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-th",
+    reportNumber = "LLNL-JRNL-831022",
+    month = "1",
+    year = "2022"
+}
+
 @article{arXiv21,
     author = "Marevic, P. and Schunck, N. and Ney, E. M. and P\'erez, R. Navarro and Verriere, M. and O'Neal, J.",
     title = "{Axially-deformed solution of the Skyrme-Hartree-Fock-Bogoliubov equations using the transformed harmonic oscillator basis (IV) hfbtho (v4.0): A new version of the program}",
